Fix dynamic input on small screens

--- a/src/scss/_objects/_forms/dynamic-input.scss
+++ b/src/scss/_objects/_forms/dynamic-input.scss
@@ -3,6 +3,8 @@
 
 .input-group {
   position: relative;
+  display: flex;
+  align-items: center;
 
   &--disabled {
     opacity: 0.6;
@@ -16,7 +18,6 @@
   &__icon {
     position: absolute;
     right: 0;
-    top: 0;
     height: 100%;
     display: flex;
     align-items: center;
@@ -64,7 +65,6 @@
       & + label {
         position: absolute;
         text-align: right;
-        top: 0;
         margin: 6px 1px;
         left: 0;
         right: 0;
